# Testing_SFML

./: CMakeLists.txt  assigment_1.txt  config.txt
notbuild/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  SFML_test  cmake_install.cmake  compile_commands.json
notbuild/.cmake/api/v1/reply/: cache-v2-0fcbff2b41778e811269.json  cmakeFiles-v1-91660760c065cb522c58.json  codemodel-v2-13c4326bcd04aaedd2cc.json  index-2024-07-19T04-22-04-0023.json  target-SFML_test-Debug-eb5fff4fa6277f1c2332.json
notbuild/Testing/: TAG
notbuild/Testing/20240719-0421/: Test.xml
src/: Vec2.cpp  Vec2.h  bin  config.txt  config2.txt  main.cpp  main.cpp_old
